fix(gui): don't show scrollbars

--- a/gui/src/scss/main.scss
+++ b/gui/src/scss/main.scss
@@ -38,3 +38,7 @@ pre {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+::-webkit-scrollbar {
+  display: none; //hide scrollbars
+}
